core/engine/tests/snapshots/engine__expression-table-map_1.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  customer:
    country: US
    name: John Doe
  exprItems: []
  exprItemsSum:
    "$serde_json::private::Number": "0"
  items:
    - amount:
        "$serde_json::private::Number": "1000"
      group: electronics
      name: Laptop
    - amount:
        "$serde_json::private::Number": "50"
      group: accessories_new
      name: Mouse
  tblItems:
    - amount:
        "$serde_json::private::Number": "1000"
      group: electronics
      name: Laptop
    - amount:
        "$serde_json::private::Number": "50"
      group: accessories_new
      name: Mouse
  tblItemsSum:
    "$serde_json::private::Number": "1050"
trace:
  3814877d-0169-45dc-b4f5-5f9eade2e4f1:
    id: 3814877d-0169-45dc-b4f5-5f9eade2e4f1
    input:
      customer:
        country: US
        name: John Doe
      exprItems: []
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    name: sum
    order:
      "$serde_json::private::Number": "2"
    output:
      customer:
        country: US
        name: John Doe
      exprItems: []
      exprItemsSum:
        "$serde_json::private::Number": "0"
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    performance: "[perf]"
    traceData:
      exprItemsSum:
        result: "0"
  5f56e61b-5687-4758-8524-8121df13b2ba:
    id: 5f56e61b-5687-4758-8524-8121df13b2ba
    input:
      customer:
        country: US
        name: John Doe
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    name: expr
    order:
      "$serde_json::private::Number": "1"
    output:
      customer:
        country: US
        name: John Doe
      exprItems: []
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    performance: "[perf]"
    traceData: []
  8ceca45e-e6ff-4613-984c-5846e53c5a39:
    id: 8ceca45e-e6ff-4613-984c-5846e53c5a39
    input:
      customer:
        country: US
        name: John Doe
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
      tblItems:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    name: sum
    order:
      "$serde_json::private::Number": "4"
    output:
      customer:
        country: US
        name: John Doe
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
      tblItems:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
      tblItemsSum:
        "$serde_json::private::Number": "1050"
    performance: "[perf]"
    traceData:
      tblItemsSum:
        result: "1050"
  b8ebb212-e290-4131-9703-0bb7b1fd2328:
    id: b8ebb212-e290-4131-9703-0bb7b1fd2328
    input:
      customer:
        country: US
        name: John Doe
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    name: table
    order:
      "$serde_json::private::Number": "3"
    output:
      customer:
        country: US
        name: John Doe
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
      tblItems:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    performance: "[perf]"
    traceData: []
  be2a55f4-cdd8-482e-b53c-a947cbb7d7a0:
    id: be2a55f4-cdd8-482e-b53c-a947cbb7d7a0
    input: ~
    name: request
    order:
      "$serde_json::private::Number": "0"
    output:
      customer:
        country: US
        name: John Doe
      items:
        - amount:
            "$serde_json::private::Number": "1000"
          group: electronics
          name: Laptop
        - amount:
            "$serde_json::private::Number": "50"
          group: accessories_new
          name: Mouse
    performance: "[perf]"
    traceData: ~
